--- a/src/components/layout-global.css
+++ b/src/components/layout-global.css
@@ -2,6 +2,7 @@ body {
   border-style: solid;
   border-color: black;
   border-width: 0;
+  min-height: 100vh;
 }
 
 @media screen and (min-width: 640px) {
