Introduce dark and light theme CSS

--- a/src/components/layout-global.css
+++ b/src/components/layout-global.css
@@ -1,40 +1,50 @@
 body {
-  border-style: solid;
-  border-color: black;
-  border-width: 0;
-  min-height: 100vh;
+  --theme-ui-colors-primary: #f0f;
+  --theme-ui-colors-secondary: #0f0;
+  font-family: monospace;
+  font-weight: 400;
+  line-height: 1.625;
+  margin: 0;
+
+  color: var(--theme-ui-colors-text);
+  background-color: var(--theme-ui-colors-background);
 }
 
-@media screen and (min-width: 640px) {
-  body:not(.embed) {
-    border-width: 10px;
+@media (prefers-color-scheme: light) {
+  body {
+    --theme-ui-colors-text: #000;
+    --theme-ui-colors-background: #fbfaf2;
+    --theme-ui-colors-muted: #f6f6f6;
+    --theme-ui-colors-detail: #000;
   }
 }
-@media screen and (min-width: 832px) {
-  body:not(.embed) {
-    border-width: 15px;
+@media (prefers-color-scheme: dark) {
+  body {
+    --theme-ui-colors-text: #eee;
+    --theme-ui-colors-background: #222;
+    --theme-ui-colors-muted: #030;
+    --theme-ui-colors-detail: #cfc9;
   }
 }
 
 a:link,
 a:visited {
-  color: #000;
+  color: var(--theme-ui-colors-text);
   font-weight: bold;
 }
 
 a:hover,
 a:focus {
-  color: #f0f;
+  color: var(--theme-ui-colors-primary);
   text-decoration: none;
 }
 
 a:active {
-  color: #0f0;
-  font-weight: bold;
+  color: var(--theme-ui-colors-secondary);
 }
 
 hr {
   border-style: solid;
-  border-color: black;
+  border-color: var(--theme-ui-colors-detail);
   border-width: 1px 0 0;
 }
