Add some polish WebGL notes

--- a/src/components/layout-global.css
+++ b/src/components/layout-global.css
@@ -80,3 +80,8 @@ code {
   background-color: var(--theme-ui-colors-shadow);
   padding: 0.25rem;
 }
+
+.prism-code {
+  overflow: auto;
+  max-width: 100%;
+}
