--- a/src/components/layout-global.css
+++ b/src/components/layout-global.css
@@ -60,11 +60,7 @@ table {
 }
 
 tbody tr:nth-child(2n-1) {
-  background-image: linear-gradient(
-    90deg,
-    var(--theme-ui-colors-background),
-    var(--theme-ui-colors-shadow) 15%
-  );
+  background-color: var(--theme-ui-colors-shadow);
 }
 
 th {
