--- a/src/components/layout-global.css
+++ b/src/components/layout-global.css
@@ -53,12 +53,29 @@ hr {
   border-width: 1px 0 0;
 }
 
+ul {
+  margin-bottom: 2rem;
+}
+
+p + h2,
+p + h3,
+p + h4 {
+  margin-top: 2rem;
+}
+
+blockquote {
+  border-left: 0.5rem solid var(--theme-ui-colors-detail);
+  padding-left: 1rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+}
+
 table {
   border-spacing: 0;
   border-collapse: collapse;
   width: 100%;
-  display: block;
   overflow: auto;
+  margin-bottom: 2rem;
 }
 
 tbody tr:nth-child(2n-1) {
@@ -71,6 +88,7 @@ th {
 
 th,
 td {
+  text-align: left;
   padding: 0.5rem 1rem 0.5rem 0rem;
 }
 
