Restrict max width of main website

--- a/src/components/layout-global.css
+++ b/src/components/layout-global.css
@@ -8,6 +8,7 @@ body {
 
   color: var(--theme-ui-colors-text);
   background-color: var(--theme-ui-colors-background);
+  max-width: 764px;
 }
 
 @media (prefers-color-scheme: light) {
